# pulseai

./: .gitignore  README.md  docker-compose.yml
app/: .env.example  Dockerfile  alembic.ini  pom.xml  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 001_initial_schema.py
app/src/: config.py  database.py  dependencies.py  main.py
app/src/ai/application/: dto.py  service.py
app/src/ai/domain/: model.py  rag_port.py  repository.py
app/src/ai/infrastructure/: persistence.py  rag.py  router.py
app/src/event/: listener.py
app/src/main/java/com/pulseai/: PulseAiApplication.java
app/src/main/java/com/pulseai/ai/application/dto/: KnowledgeArticleResponse.java  SuggestionResponse.java
app/src/main/java/com/pulseai/event/: TicketEventListener.java
app/src/main/resources/: application.yml
app/src/main/resources/db/migration/: V1__create_tickets_table.sql  V2__create_ai_suggestions_table.sql  V3__create_knowledge_articles_table.sql
app/src/notification/: router.py  service.py
app/src/shared/: events.py  metrics.py
app/src/test/java/com/pulseai/ai/domain/: ConfidenceScoreTest.java
app/src/test/java/com/pulseai/ticket/application/: TicketApplicationServiceTest.java
app/src/test/java/com/pulseai/ticket/domain/: TicketTest.java
app/src/ticket/application/: dto.py  service.py
app/src/ticket/domain/: model.py  repository.py
app/src/ticket/infrastructure/: persistence.py  router.py
app/tests/: conftest.py
app/tests/ai/: test_ai_suggestion.py  test_confidence_score.py
app/tests/ticket/: test_domain.py
frontend/: index.html  nginx.conf  (+3 more)
(+76 files in other folders)
